--- a/project.Rmd
+++ b/project.Rmd
@@ -18,6 +18,10 @@ Following steps have been conducted:
 
 ## Data loading
 ```{r, message=FALSE, warning=FALSE}
+library(caret)
+library(class)
+library(mclust)
+library(dplyr)
 train <- 'https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv'
 test <- 'https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv'
 if (!file.exists('data')) {dir.create('data')}
@@ -66,7 +70,6 @@ which(colnames(dat) == 'classe')
 #### Spliting the training cases into training set & validating set
 ```{r, message=FALSE, warning=FALSE}
 set.seed(4)
-library(caret)
 # split dataset into training : validating = 7:3
 validates <- createDataPartition(y = dat$classe, p = 0.3, list = F)
 training <- dat[!validates, ]
@@ -115,7 +118,6 @@ Radial basis function kernel is adopted here. The best tuning for sigma and C ar
 #### K-nearest neighbor
 ```{r, message=FALSE, warning=FALSE, cache=TRUE, fig.cap='\\label{fig:f1}Accuracies vs K for KNN models'}
 # knn
-library(class)
 ks <- seq(1, 21, 2) # try to tune the number of nearest neighbor
 tacc <- c(); vacc <- c()
 for(i in 1:length(ks)) {
@@ -143,7 +145,6 @@ valspred2 <- knn(trains[, -1], vals[, -1], trains$classe, k = 1)
 As different machine learning algorithm may classify the activities into different labels, simple majority vote is adopted here.
 
 ```{r, message=FALSE, warning=FALSE}
-library(mclust)
 dftrain <- data.frame(trainpred, trainpred1, trainpred2)
 dfval <- data.frame(valspred, valspred1, valspred2)
 tvotepred <- apply(dftrain, 1, majorityVote) %>% simplify2array
@@ -166,7 +167,7 @@ legend('bottomright', bty = 'n', legend = c('training', 'validating'), pch = 1, 
 
 From figure \ref{fig:f2}, we can see that for this specific dataset, SVM model built here does not works well. 
 
-```{r, warning=FALSE,message=FALSE}
+```{r, warning=FALSE,message=FALSE,echo=FALSE}
 my_tbl <- tibble::tribble(
   ~accuracy, ~training, ~validating,
       "random forest", 0.9594213,   0.9696043,
